--- a/Battlefactory/src/main/resources/application.yml
+++ b/Battlefactory/src/main/resources/application.yml
@@ -1,1 +1,9 @@
+server:
+  port: 8080
 
+springdoc:
+  packages-to-scan: battlefactory.common
+  swagger-ui:
+    disable-swagger-default-url: true
+    display-request-duration: true
+    operations-sorter: alpha
